# hrf-universe-home-task

./: .gitignore  pyproject.toml  start_server.py  test_api.py  test_cli.py
home_task/: README.md  api.py  cli.py  db.py  models.py
migrations/versions/: 1c3013ad5eae_add_days_to_hire_statistics_table.py  991ecb2bf269_load_data.py
